updateing publications
